# dchk-client

./: .project  Doxyfile  HISTORY.TXT  Makefile.in  configure  configure.in  setup.iss
autoconf/: checkfuncs.m4  mkinstalldirs  zlib.m4
include/: dchk.h
src/docs/: DoxygenLayout.xml  example1.c  example2.c  header.html  header.tex  main.dox  style.css  usage.dox
src/gui/: Makefile  Makefile.Release  qdchk.pro  qdchk.pro.in  qdchk.rc  qdchk.ui  res.qrc
src/gui/release/: moc_qdchk.cpp  qrc_res.cpp
src/lib/: CDchk.cpp  CIrisLWZ.cpp  compat.c  irislwz.c  random.c  socketerrors.c
trunk/: .cproject  HISTORY.TXT  Makefile.in  README.TXT  configure  makedist.pl  mingw.sh  xmlbomb.xml
trunk/autoconf/: dchk.m4  vsnprintf.m4
trunk/include/: compat.h  config.h  config.h.in  msvc-config.h  ns_parse.h
trunk/src/cli/: main.c
trunk/src/docs/: client.dox  credits.dox  example3.c  example4.c  example5.cpp  gui.dox  installation.dox  structs.dox  xml.dox
trunk/src/gui/: .cvsignore  Makefile.Debug  main.cpp  qdchk  qdchk.cpp  qdchk.h  qdchk.pro.in  ui_qdchk.h
trunk/src/lib/: dchk.c  errors.c  ns_parse.c  resolver.c  xmlparser.c
trunk/vs2008/: DCHK - Domain Check Client.vcproj  DCHK - Domain Check Library.vcproj
vs2008/: .cvsignore  DCHK - Domain Check Library.sln
